# Coc-app

./: .gitignore  Cargo.toml  Packager.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
src/: allocations.rs  character_state.rs  coc7e_app.rs  data.rs  main.rs  models.rs  occupation_state.rs  occupations.rs  quick_package.rs  ruleset.rs  save.rs  summary_rules.rs  tests.rs  ui.rs
src/ui/: characteristics.rs  concept.rs  occupation.rs  skills.rs  story_summary.rs
